@@ -6,6 +6,10 @@ Thu Oct 23 18:01:46 2013 EDT 2013 (dar)
 ------------------------------------
  * bb #9222: make fmap_unneed respect nested maps
 
+Thu Oct 17 16:50:00 2013 EDT 2013 (morgan)
+------------------------------------
+ * libclamav: bb#6348 - Add file type recognition for Office Open XML.
+
 Tue Oct 15 16:03:25 2013 EDT 2013 (dar)
 ------------------------------------
  * libclamav: bb #9154 - ELF handling re-write
@@ -14,9 +18,17 @@ Tue Oct 15 16:00:14 2013 EDT 2013 (dar)
 ------------------------------------
  * libclamav: bb #8696 - Bug reported by NIW Solutions
 
+Mon Oct 14 17:07:40 2013 EDT 2013 (morgan)
+------------------------------------
+ * bb #8209 - move perror()'s so they will work. Patches supplied by Bill Parker.
+
 Fri Oct 11 16:50:34 2013 EDT 2013 (dar)
 ------------------------------------
  * bb #9072: clamscan message separator fix
+
+Tue Oct 8 17:17:44 EDT 2013 (morgan)
+------------------------------------
+ * libclamav: Add support for XZ file type recognition and decompression.
 
 Thu Oct 3 10:49:11 2013 EDT 2013 (dar)
 ------------------------------------
